--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "^14.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-firebase-hooks": "^5.1.1"
+    "react-firebase-hooks": "^5.1.1",
+    "react-infinite-scroller": "^1.2.6"
   }
 }
