--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dayjs": "^1.11.11",
     "firebase": "^10.10.0",
     "next": "^14.1.4",
     "react": "^18.3.1",
